<resources>
    <string name="app_name">WappBlasterAI</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="contact_permission"> Contact Permission</string>
    <string name="create_account">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="required_permission">Required Permission</string>
    <string name="over_lay_permission">Need Overlay Permission</string>
    <string name="phone_state_permission">Phone State</string>
    <string name="call_permission">Initiate Call</string>
    <string name="phone_message_permission">Send SMS</string>
    <string name="phone_foreground_permission">Foreground Service</string>
    <string name="phone_number_permission">Phone Number</string>
    <string name="read_call_log_permission">Read Call Logs</string>
    <string name="read_device_permission">Need Read Device Permission</string>
    <string name="write_device_permission">Need Write Device Permission</string>
    <string name="read_call_record_permission">Need Audio Record Permission</string>
    <string name="read_microphone_permission">Need Microphone Permission</string>
    <string name="read_write_contact_permission">Need Write Contact Permission</string>
    <string name="read_contact_permission">Need Read Contact Permission</string>
    <string name="url">https://wappblaster.in/</string>
    <string name="sim_carrier_name">Sim Carrier Name</string>
    <string name="blank">blank</string>
    <string name="ver_0_0_1">ver.:1.0.7</string>
    <string name="create_account_url">https://wappblaster.in/#signup</string>
    <string name="i_accept_this_terms_condition"><![CDATA[i accept this Terms & Condition]]></string>
    <string name="terms_and_condition_url">https://docs.google.com/document/d/18t3fc_xrO0-y9cKMmyrnMYk0LYNWaTrX7QlQ0fRQ4lg/edit?usp=sharing</string>
    <string name="add_to_restricted_contact">Add To Restricted Contact.</string>
    <string name="search">Search\n</string>
    <string name="restricted_contact">Restricted Contacts</string>
    <string name="no_contacts_found">Data Not Available!</string>
    <string name="contact">Contacts</string>
    <string name="all_contact">All Contacts</string>
    <string name="uploadCallsOnServer">Call uploaded on server</string>
    <string name="all">All </string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="source_name">Source Name :</string>
    <string name="source_mobile">Source Mobile :</string>
    <string name="saveContact">Add New Contact</string>
    <string name="name">Name</string>
    <string name="isRistrictedContact">Please Check if this is Your Restricted Contact</string>
    <string name="lastMissedCalls">Last Missed Uploaded Calls</string>

    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="sure">I\'m Sure</string>
    <string name="retry">Retry</string>
    <string name="permission_dialog_title">Permission Required</string>
    <string name="permission_dialog_msg">This app requires Notification Access permissions to work.</string>
    <string name="permission_dialog_denied_title">Permission Denied</string>
    <string name="permission_dialog_denied_msg">Without this permission app is unable to auto-reply to the
        notifications. Are you sure you want to deny the permission?
    </string>

    <!-- Select apps to auto reply -->
    <string name="enable_for_apps">Enable for apps</string>
    <string name="enable_auto_reply_switch_msg">Enable Auto Reply Switch First.</string>
    <string name="error_atleast_single_app_must_be_selected">Error: Select at-least a single app</string>
    <string name="auto_start_permission_dialog_title">AutoStart Permission</string>
    <string name="auto_start_permission_dialog_message">Enable \"Auto Start\" permission in device settings to allow
        Auto Reply to start on device restart.
    </string>
    <string name="overlay_permission_dialog_message">Enable \"Overlay\" permission in device settings to allow
        Whatsapp to start on device.
    </string>
    <string name="enable_auto_start_label">Enable Auto Start</string>
    <string name="enable_auto_start_summary">Some devices might need you to manually enable Auto start for Auto Reply
        from device settings
    </string>
    <string name="restart_service">Restart Service</string>
    <string name="pref_notification_listener_permission" translatable="false">pref_notification_listener_permission</string>
    <string name="device_based_settings_message">Note: Settings may vary or may not be available based on your device
    </string>
    <string name="setting_not_available_for_device">This setting is not available or may not be needed for your
        device.
    </string>
    <string name="enable_auto_start_setting">Proceed</string>
    <string name="decline_auto_start_setting">Cancel</string>
    <string name="pref_auto_start_permission" translatable="false">pref_auto_start_permission</string>

    <!-- Strings related to the Alert Dialog -->
    <string name="notification_listener_service">"Notification Listener Service"</string>
    <string name="notification">"Notifications"</string>
    <string name="notification_listener_service_explanation">"For the app. to work you need to enable the
        Notification Listener Service. Enable it now?"
    </string>
    <string name="logout">Logout</string>
    <string name="auto_dialer">Start Auto Dialer</string>
    <string name="service">Services</string>
    <string name="sim">Sim</string>
    <string name="selected">Selected</string>
    <string name="unselected">Unselected</string>
    <string name="permission_pending">Permissions</string>
    <string name="ristricted_contact">Ristricted Contact</string>
    <string name="start_call_service">Start Call Service</string>
    <string name="granted">Granted</string>
    <string name="denied">Denied</string>
    <string name="already_running">Already Running</string>
    <string name="not_running">Not Running</string>
    <string name="phone_log">Phone Logs</string>
    <string name="reply_message">Reply Message</string>
    <string name="add_reply_message">Add Your Reply Message Here</string>
    <string name="add_Repeat_reply_message">Message Repeat Time</string>
    <string name="please_check_all_pending_permission_for_call_service_all_permission_is_required">Please check All Pending Permission, For Call Service all Permission is Required</string>
    <string name="no_records_found">No records Found</string>
    <string name="application_manager">Application Manager</string>
    <string name="alarm_manager">Call Service Supporter</string>
    <string name="work_manager">Call Service Manager</string>
    <string name="cannot_initiate_this_call">Currently we cannot initiate this call,Please try after some time</string>
    <string name="do_you_want_to_close_application">Do you want to Close Application?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>