<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:background="@color/material_deep_teal_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ui.login.LoginActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/bg_curve_bottom"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                android:layout_marginTop="100dp"/>
            <TextView
                android:id="@+id/domains"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:drawablePadding="20dp"
                android:paddingRight="10dp"
                android:text=""
                android:gravity="center|left"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:background="@drawable/edit_text_back"
                app:drawableRightCompat="@drawable/arrow_down"
                tools:ignore="RtlHardcoded" />
            <Spinner
                android:id="@+id/domainSpinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/codePicker"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:background="@drawable/edit_text_back"
                    android:layout_marginLeft="20dp"
                    android:layout_height="57dp"
                    android:layout_marginTop="3dp"
                    app:ccpDialog_keyboardAutoPopup="false"
                    app:ccpDialog_cornerRadius="@dimen/ccp_padding"
                    app:ccp_defaultLanguage="ENGLISH"
                    app:ccp_showNameCode="false"
                    app:ccpDialog_showCloseIcon="true"
                    app:ccp_defaultNameCode="IN"/>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/layEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:errorEnabled="true"
                    android:layout_marginHorizontal="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:maxLength="15"
                        android:textColor="@color/black"
                        android:inputType="number"
                        android:textColorHint="@color/hintLine"
                        android:hint="@string/prompt_mobile" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/layPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                android:layout_marginHorizontal="16dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/hintLine"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/acceptTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:text="@string/i_accept_this_terms_condition"/>

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/fill_main_btn"
                android:text="@string/action_sign_in"
                />
            <TextView
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="10dp"
                android:textAlignment="center"
                android:visibility="visible"
                android:textColor="@color/btnBlue"
                android:text="@string/create_account"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>