<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingStart="16dp"
                android:text="@string/contact"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/back"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
        <EditText
            android:id="@+id/search"
            style="@style/btnOutline"
            android:hint="@string/search" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ContactListRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbarFadeDuration="200"
                android:scrollbarSize="5dp"
                android:scrollbarThumbVertical="@color/colorAccent"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/restricted_contact_item" />

    </LinearLayout>

    <TextView
        android:id="@+id/emptyContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_contacts_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lay" />

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
