<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:background="@color/material_deep_teal_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.ui.login.LoginActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/bg_curve_bottom"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/backBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/saveContact"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableLeftCompat="@drawable/back"
                    tools:ignore="RtlSymmetry"
                    app:drawableTint="@color/colorAccent" />

            </LinearLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"
                android:layout_marginTop="100dp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/layEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:errorEnabled="true"
                android:layout_marginHorizontal="16dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:inputType="number"
                    android:hint="@string/prompt_mobile" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/layPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                android:layout_marginHorizontal="16dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/name"
                    android:imeActionLabel="@string/saveContact"
                    android:imeOptions="actionDone"
                    android:maxLength="20"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--<com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/acceptTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/isRistrictedContact"/>-->

            <TextView
                android:id="@+id/saveContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="16dp"
                android:paddingVertical="10dp"
                android:layout_marginBottom="60dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:background="@drawable/fill_main_btn"
                android:text="@string/saveContact"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>